overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -76,6 +76,10 @@ body{
 
 }
 
+html {
+  overflow-x: hidden;
+}
+
 @-ms-viewport{
   width: device-width;
 }
@@ -148,14 +152,24 @@ article .home{
 }
 
 section.content {
-  display: block;
   width: 100%;
-  position: relative;
   display: flex;
 	flex-direction: row;
 	justify-content: space-around;
   max-width: 1200px;
   margin: 50px auto;
+}
+
+section.content2 {
+  flex-direction: row-reverse;
+  position: relative;
+left: 300px
+width: 100%;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+max-width: 1200px;
+margin: 50px auto;
 }
 
 section.content div {
@@ -186,13 +200,13 @@ h1 {
 }
 
 h2.project-head-right{
-	    font-size: 2.5em;
+	 font-size: 2.5em;
   font-family: 'Droid Sans', sans-serif;
   font-style: normal;
   font-weight: normal;
   line-height: 56px;
   color: #000000;
-	    margin-right: 15em;
+	margin-right: 15em;
 }
 
 p.project-description-right{
@@ -597,13 +611,11 @@ p {
 
 /* make all images responsive */
 img {
-    width: auto;
-    max-width: 100%;
+
     height: auto;
 		margin: 0 auto;
 display: block;
-	/*	padding-left: 65px; */
-	}
+}
 
 .competitive-logo {
     display: inline-block;
@@ -841,7 +853,7 @@ section.content div {
 		section.content div {
 			    width: 100%;
 					flex: none;
-					margin-bottom:10px;
+          margin: 10px auto;
 			}
 				ul.footer-info {
 					width: 45%;
@@ -852,15 +864,22 @@ section.content div {
 			}
 
 			section.content {
-				display: block;
-				text-align: center;
+        margin: 0 auto;
+				display: flex;
+        flex-direction: column-reverse;
 			}
 
-		.project2-image{
-		max-width: 185px;
+      section.content2 {
+        margin-left: 0 auto;
+        flex-direction: column-reverse;
+        display: flex;
+      }
+
+		    .project2-image{
+		max-width: 300px;
 		}
 
-		.project1-image{
+		  .project1-image{
 			max-width: 135px;
 		}
 	}
